# phrascriber

./: README.md  phrascriber.py  pyproject.toml
src/phrascriber/: client.py  example_client.py  phrascriber.py  phrase_to_jenova.py  server.py
