[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phrascriber"
version = "0.1.1"
dependencies = [
]

[project.scripts]
# phrascriber_jenova = "phrascriber.phrase_to_jenova:main"
phrascriber = "phrascriber.server:main"

[tool.setuptools.packages.find]
where = ["src"]
